# habit_bank

./: Makefile  README.md  docker-compose.yml
backend/: habit_bank.db  pyproject.toml  seed.py
backend/app/: database.py  main.py  models.py
backend/app/core/: ai_agent.py  auth.py  deeplogger.py  ledger_engine.py  logger.py  time_utils.py  unit_converter.py
backend/app/routers/: admin.py  chat.py  dashboard.py  feedback.py  habits.py  testimonials.py  users.py  waitlist.py
backend/tests/: conftest.py  test_analytics.py  test_converter.py  test_habits.py  test_ledger.py  test_logs.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  PRODUCT_SPEC.md  TECHNICAL_REVIEW.md  USER_GUIDE.md  context.md
docs/plans/: 2026-04-24-ai-assistant-byok.md  2026-04-24-ui-ux-gamification-redesign.md
frontend/: .gitignore  AGENTS.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/public/: manifest.webmanifest
frontend/src/: types.ts
frontend/src/app/: app.css  layout.tsx  page.tsx
frontend/src/components/: AnalyticsDashboard.tsx  AssistantChat.tsx  CalendarWidget.tsx  Combobox.tsx  CreateHabitModal.tsx  DailyBreakdownModal.tsx  DailySpectrumWidget.tsx  EditHabitModal.tsx  FeedbackModal.tsx  Footer.tsx  HabitCard.tsx  HabitChart.tsx  HabitRegistryCard.tsx  Header.tsx  Heatmap.tsx  Logo.tsx  Sidebar.tsx  ThemeSwitcher.tsx  TimeTravelView.tsx  TopBar.tsx  UnitHierarchyEditor.tsx  UserSelector.tsx  Wizard.tsx
frontend/src/hooks/: useAgenda.ts  useCreateHabit.ts  useEditHabit.ts  useHabit.ts  useUser.ts
frontend/src/lib/: api.ts  utils.ts
(+13 files in other folders)
