[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "psycopg-binary>=3.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "asyncer>=0.0.17",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]
